test/spec_vectors/load/fail/module_22.wat
(module (memory 1) (func $load16_s_i64 (i64.load16_s (i32.const 0))))